More CSS media queries fixed so app UI is improved on mobile. Projects page fixed for all media queries >400px. Nav temporarily fixed to at least be functional, and z-index reduced so hopefully toast notifications come out on top.

--- a/frontend/src/App/styles/components/_nav.scss
+++ b/frontend/src/App/styles/components/_nav.scss
@@ -2,7 +2,7 @@
   @include flexCenterCenter($flex-direction: column, $justify-content: space-around);
   margin: 3rem 0;
   width: 100%;
-  z-index: 999999999999999;
+  // z-index: 999999999999999;
 
   @media (max-width: 950px) {
     @include flexCenterCenter($flex-direction: row, $justify-content: space-around);
