--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-rows: repeat(5, 1fr);
 	grid-template-columns: 7rem 1fr;
+	overflow: hidden;
 	
 	@media (max-width: 950px) {
 		grid-template-rows: 7rem 1fr 7rem;
@@ -66,7 +67,8 @@
             height: 200vh;
         }
         @media (max-width: 950px) {
-            height: 200%;
+			height: 200%;
+			@include flexCenterCenter($flex-direction: column);
         }
         @media (max-width: 500px) {
 			// display: block;
