--- a/frontend/src/App/styles/screens/_home.scss
+++ b/frontend/src/App/styles/screens/_home.scss
@@ -52,7 +52,7 @@
         }
         &--5 {
             z-index: 999999;
-            white-space: nowrap;
+            // white-space: nowrap;
         }
 
         &--tk {
