--- a/frontend/src/App/styles/screens/_projects.scss
+++ b/frontend/src/App/styles/screens/_projects.scss
@@ -115,6 +115,10 @@
             height: 100%;
             overflow: hidden;
 
+            // @media (max-width: 950px) {
+            //     height: 30rem;
+            //     width: 40rem;
+            // }
             @media (max-width: 500px) {
                 height: 30rem;
                 width: 40rem;
@@ -146,16 +150,16 @@
                 transform: scale(.75);
             }
             @media (max-width: 950px) {
-                transform: scale(0.8);
+                transform: scale(.9);
             }
             @media (max-width: 800px) {
-                transform: scale(0.7);
-            }
-            @media (max-width: 700px) {
-                transform: scale(0.6);
+                transform: scale(0.8);
             }
             @media (max-width: 600px) {
-                transform: scale(0.5);
+                transform: scale(0.7);
+            }
+            @media (max-width: 450px) {
+                transform: scale(0.6);
             }
         }
     }
